** Error handling
- accidental keywords instead of =process= or =workflow= field names now trigger a more specific “invalid field” syntax error instead of generating invalid syntax that throws an unclear error later.
- errors when loading workflows no longer show the GWL or SRFI modules as the error location; instead they are limited to the source file where they originated.
- =pick= from =(gwl utils)= now raise error conditions when an item cannot be found.
** Workflow syntax
- new procedure =get= to access members of nested association lists by path.
** Execution engines
- The =runner= field of all execution engines is now a procedure that takes a list of commands and returns a list of commands.

* Changes in 0.2.1 (since 0.2.0)
** Documentation
- additional documentation of the “run-time” field and the “complexity” type
- added example of how to use =pick= with local variable definitions
** Bug fixes
- due to a faulty condition (a test whether a file is a directory),
  process outputs were never cached.  The condition has been
  corrected.
- outputs with absolute file names are no longer considered missing
- workflows without inputs no longer trigger an error
* Changes in 0.2.0 (since 0.1.1)
** Command line interface
  * Remove the “guix process” command.
  * Remove GUIX_WORKFLOW_PATH; load workflows from files instead.
  * Add --container flag to enable process isolation
** Workflow syntax
  * Support Wisp syntax in workflow files.
  * Add syntactic sugar for defining workflows and processes.
  * Support syntax for procedures written in languages other than Guile.
  * Add graph syntax to specify process dependencies.
  * Add “auto-connect” helper to automatically link up process inputs and outputs.
  * Deprecate the “restrictions” field in workflow records in favor of “auto-connect” and “graph” syntax in the “processes” field.
  * Fields of the “process” form that expect lists now also accept multiple values.