@@ -25,6 +25,7 @@ Copyright © 2018, 2019, 2020, 2021 Ricardo Wurmus <rekado@elephly.net>
 ** Error handling
 - accidental keywords instead of =process= or =workflow= field names now trigger a more specific “invalid field” syntax error instead of generating invalid syntax that throws an unclear error later.
 - errors when loading workflows no longer show the GWL or SRFI modules as the error location; instead they are limited to the source file where they originated.
+- brace errors in code snippets are now reported with approximate location
 - =pick= from =(gwl utils)= now raise error conditions when an item cannot be found.
 ** Workflow syntax
 - new procedure =get= to access members of nested association lists by path.
